# 4sem

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  QtRayTracer.pro  RayTracer.h  Screen.h  colour.cpp  colour.h  geom_utils.cpp  geom_utils.h  kd.h  main.cpp  main2.cpp  mainwindow.h  parser.h  primitive.h  scene.h  structures.h
HaffmanTree/: .directory  CMakeLists.txt  cinbitstream.h  coder.h  coutbitstream.h  myheap.h
HaffmanTree/code/: arhivator.cpp  coder.h  decoder.h
RayTracer/: CMakeLists2.txt  RayTracer.h  Screen2.h  colour.cpp  geom_utils.cpp  mainwindow.cpp  mainwindow.h  primitive.h  scene.h
RayTracer/cmake_modules/: FindSFML.cmake
allocator/: Allocator.cpp  Allocator.h  CMakeCache.txt  CMakeLists.txt  Config.h  Heap.cpp  Heap.h  MainHeap.cpp  MainHeap.h  Makefile  Superblock.cpp  Superblock.h  allocator.cbp  cmake_install.cmake  main.cpp  mtallocator-copy.h  mtallocator.h  upikhivatel.py
